--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.port.http=8081
+
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = postgres
+quarkus.datasource.password = admin123
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/green-cafe
+
+quarkus.hibernate-orm.database.default-schema=main
+quarkus.hibernate-orm.database.generation=update
